--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -1,3 +1,98 @@
+/**
+ * Light theme
+ */
+@mixin sicl-light-theme() {
+  // General
+  --background-color: #{$neutral-50};
+  // Notes box - not used right now (only internally in Figma), but could be used in the future
+  --box-background-color: #{$neutral-100};
+  --box-text-color: #{$neutral-700};
+  // Text
+  --text-header-color: #{$neutral-900};
+  --text-subtitle-color: #{$neutral-700};
+  --text-paragraph-color: #{$neutral-800};
+  // Button
+  --button-hover-effect: #{$shadow-small};
+  --button-primary-background-color: #{$primary-600};
+  --button-primary-text-color: #{$primary-100};
+  --button-primary-focused-background-color: #{$primary-700};
+  --button-primary-disabled-background-color: #{$neutral-200};
+  --button-primary-disabled-color: #{$neutral-600};
+  --button-secondary-background-color: #{$secondary-500};
+  --button-secondary-text-color: #{$secondary-100};
+  --button-secondary-focused-background-color: #{$secondary-600};
+  --button-secondary-disabled-background-color: #{$neutral-50};
+  --button-secondary-disabled-color: #{$neutral-400};
+  --button-secondary-disabled-border-color: #{$neutral-300};
+  --button-tertiary-background-color: #{$primary-200};
+  --button-tertiary-text-color: #{$primary-800};
+  --button-tertiary-focused-background-color: #{$primary-300};
+  --button-tertiary-disabled-background-color: #{$neutral-50};
+  --button-tertiary-disabled-color: #{$neutral-400};
+  --button-danger-background-color: #{$danger-primary};
+  --button-danger-text-color: #{$primary-100};
+  --button-danger-focused-background-color: #{$danger-dark};
+  --button-danger-disabled-background-color: #{$neutral-50};
+  --button-danger-disabled-color: #{$danger-light};
+  --button-danger-disabled-border-color: #{$danger-light};
+  // Input
+  --input-hover-effect: #{$shadow-medium};
+  --input-background-color: #{$neutral-50};
+  --input-text-color: #{$neutral-900};
+  --input-focused-background-color: #{$primary-100};
+  --input-placeholder-color: #{$neutral-300};
+  --input-label-color: #{$neutral-700};
+  --input-left-icon-color: #{$neutral-700};
+  --input-disabled-background-color: #{$neutral-100};
+  --input-disabled-border-color: #{$neutral-500};
+  --input-default-border-color: #{$primary-500};
+  --input-default-focused-border-color: #{$primary-600};
+  --input-error-border-color: #{$danger-light};
+  --input-error-focused-border-color: #{$danger-primary};
+  // Checkbox
+  --checkbox-background-color: #{$neutral-50};
+  --checkbox-focused-background-color: #{$primary-100};
+  --checkbox-text-color: #{$neutral-900};
+  --checkbox-outline-color: #{$primary-300};
+  --checkbox-default-check-color: #{$primary-100};
+  --checkbox-default-border-color: #{$primary-400};
+  --checkbox-default-focused-border-color: #{$primary-600};
+  --checkbox-default-checked-background-color: #{$primary-600};
+  --checkbox-default-checked-border-color: #{$primary-600};
+  --checkbox-warning-border-color: #{$danger-light};
+  --checkbox-warning-focused-background-color: #{$danger-primary};
+  --checkbox-warning-focused-border-color: #{$danger-primary};
+  --checkbox-disabled-background-color: #{$neutral-300};
+  --checkbox-disabled-border-color: #{$neutral-700};
+  --checkbox-disabled-color: #{$neutral-600};
+  // Radio
+  --radio-background-color: #{$neutral-50};
+  --radio-text-color: #{$neutral-900};
+  --radio-outline-color: #{$primary-300};
+  --radio-default-check-color: #{$primary-100};
+  --radio-default-border-color: #{$primary-400};
+  --radio-default-focused-border-color: #{$primary-600};
+  --radio-default-checked-background-color: #{$primary-600};
+  --radio-default-checked-border-color: #{$primary-600};
+  --radio-warning-border-color: #{$danger-light};
+  --radio-warning-focused-background-color: #{$danger-primary};
+  --radio-warning-focused-border-color: #{$danger-primary};
+  --radio-disabled-background-color: #{$neutral-300};
+  --radio-disabled-border-color: #{$neutral-700};
+  --radio-disabled-color: #{$neutral-600};
+  // Toast
+  --toast-effect: #{$shadow-large};
+  --toast-primary-text-color: #{$primary-100};
+  --toast-primary-background-color: #{$primary-600};
+  --toast-primary-before-background-color: #{$primary-700};
+  --toast-danger-background-color: #{$danger-primary};
+  --toast-danger-before-background-color: #{$danger-dark};
+  --toast-warning-background-color: #{$warning-primary};
+  --toast-warning-before-background-color: #{$warning-dark};
+  --toast-success-background-color: #{$success-primary};
+  --toast-success-before-background-color: #{$success-dark};
+}
+
 @mixin placeholder {
   &.placeholder { @content; }
   &:-moz-placeholder { @content; }
