--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -86,7 +86,7 @@
   --toast-danger-background-color: #{$danger-primary};
   --toast-danger-before-background-color: #{$danger-dark};
   --toast-warning-background-color: #{$warning-primary};
-  --toast-warning-text-color: ${$neutral-900};
+  --toast-warning-text-color: #{$neutral-900};
   --toast-warning-before-background-color: #{$warning-dark};
   --toast-success-background-color: #{$success-primary};
   --toast-success-before-background-color: #{$success-dark};
@@ -181,7 +181,7 @@
   --toast-danger-background-color: #{$danger-primary};
   --toast-danger-before-background-color: #{$danger-dark};
   --toast-warning-background-color: #{$warning-primary};
-  --toast-warning-text-color: ${$neutral-900};
+  --toast-warning-text-color: #{$neutral-900};
   --toast-warning-before-background-color: #{$warning-dark};
   --toast-success-background-color: #{$success-primary};
   --toast-success-before-background-color: #{$success-dark};
@@ -259,9 +259,5 @@ h3 {
   font-weight: $typography_weight-bold;
   font-size: $typography_size-header-3;
   line-height: $typography_line-height-header-3;
-  margin: 0;
-}
-
-p {
   margin: 0;
 }
