--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -17,3 +17,85 @@
     @include sicl-light-theme();
   }
 }
+
+h1 {
+  font-family: $typography_font-family;
+  font-weight: $typography_weight-extra-bold;
+  font-size: $typography_size-header-1;
+  line-height: $typography_line-height-header-1;
+  color: var(--text-header-color);
+  margin: 0;
+}
+
+h2 {
+  font-family: $typography_font-family;
+  font-weight: $typography_weight-extra-bold;
+  font-size: $typography_size-header-2;
+  line-height: $typography_line-height-header-2;
+  color: var(--text-header-color);
+  margin: 0;
+}
+
+h3 {
+  font-family: $typography_font-family;
+  font-weight: $typography_weight-bold;
+  font-size: $typography_size-header-3;
+  line-height: $typography_line-height-header-3;
+  color: var(--text-header-color);
+  margin: 0;
+}
+
+h4 {
+  font-family: $typography_font-family;
+  font-weight: $typography_weight-regular;
+  font-size: $typography_size-subtitle-1;
+  line-height: $typography_line-height-subtitle-1;
+  color: var(--text-subtitle-color);
+  margin: 0;
+}
+
+h5 {
+  font-family: $typography_font-family;
+  font-weight: $typography_weight-bold;
+  font-size: $typography_size-subtitle-2;
+  line-height: $typography_line-height-subtitle-2;
+  color: var(--text-subtitle-color);
+  margin: 0;
+}
+
+p {
+  font-family: $typography_font-family;
+  margin: 0;
+  color: var(--text-paragraph-color);
+  
+  .body-1 {
+    font-size: $typography_size-body-1;
+    line-height: $typography_line-height-body-1;
+
+    &.regular {
+      font-weight: $typography_weight-regular;
+    }
+    &.semi-bold {
+      font-weight: $typography_weight-semi-bold;
+    }
+    &.bold {
+      font-weight: $typography_weight-bold;
+    }
+  }
+
+  .body-2 {
+    font-weight: $typography_weight-regular;
+    font-size: $typography_size-body-2;
+    line-height: $typography_line-height-body-2;
+
+    &.regular {
+      font-weight: $typography_weight-regular;
+    }
+    &.semi-bold {
+      font-weight: $typography_weight-semi-bold;
+    }
+    &.bold {
+      font-weight: $typography_weight-bold;
+    }
+  }
+}
