➕ Added container border color variable ➕ Added text-transform to h5

--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -61,6 +61,7 @@ h5 {
   line-height: $typography_line-height-subtitle-2;
   color: var(--text-subtitle-color);
   margin: 0;
+  text-transform: uppercase;
 }
 
 p {
