--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -5,6 +5,7 @@
   // General
   --background-color: #{$primary-100};
   --container-background-color: #{$neutral-100};
+  --container-border-color: #{$primary-300};
   // Text
   --text-header-color: #{$neutral-900};
   --text-subtitle-color: #{$neutral-700};
@@ -99,6 +100,7 @@
   // General
   --background-color: #{$neutral-900};
   --container-background-color: #{$neutral-800};
+  --container-border-color: #{$primary-800};
   // Text
   --text-header-color: #{$neutral-200};
   --text-subtitle-color: #{$neutral-100};
