➕ Added label and margin to slotted elements

--- a/src/components/sicl-radio-group/sicl-radio-group.scss
+++ b/src/components/sicl-radio-group/sicl-radio-group.scss
@@ -5,4 +5,16 @@
   justify-content: center;
   flex-wrap: wrap;
   row-gap: 8px;
+
+  .radiogroup__label {
+    color: var(--input-label-color);
+    font-family: $typography_font-family;
+    font-size: $typography_size-body-2;
+    font-weight: $typography_weight-semi-bold;
+    line-height: $typography_line-height-body-2;
+  }
+
+  ::slotted(*) {
+    margin-left: 8px;
+  }
 }
