➕ Checkbox outline animation

--- a/src/components/sicl-checkbox/sicl-checkbox.scss
+++ b/src/components/sicl-checkbox/sicl-checkbox.scss
@@ -10,6 +10,10 @@
   font-size: $typography_size-body-2;
   font-weight: $typography_weight-regular;
   line-height: $typography_line-height-body-2;
+
+  * {
+    transition: all 120ms linear;
+  }
 }
 
 .checkbox__wrapper input[type='checkbox'] {
