--- a/src/components/sicl-input/sicl-input.scss
+++ b/src/components/sicl-input/sicl-input.scss
@@ -14,6 +14,7 @@
 }
 
 .input__field {
+  flex: 1 1 auto;
   outline: none;
   border: none;
   background: transparent;
@@ -37,6 +38,7 @@
   flex-direction: row;
   column-gap: 8px;
   align-items: center;
+  justify-content: stretch;
   box-sizing: border-box;
   padding: 12px 16px;
   border-radius: 16px;
