🔧 Checkbox cursor fixed

--- a/src/components/sicl-checkbox/sicl-checkbox.scss
+++ b/src/components/sicl-checkbox/sicl-checkbox.scss
@@ -21,6 +21,7 @@
   width: 18px;
   height: 18px;
   opacity: 0.00001;
+  cursor: pointer;
 }
 
 .checkbox__wrapper input[type='checkbox']:hover + svg {
